# generic-ec

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  katex-header.html
.github/: changelog.sh
.github/workflows/: publish.yml  readme.yml  rust.yml
docs/: hash_to_scalar.md
generic-ec/: CHANGELOG.md  Cargo.toml
generic-ec-core/: CHANGELOG.md  Cargo.toml  README.md
generic-ec-core/src/: coords.rs  hash_to_curve.rs  lib.rs
generic-ec-curves/: CHANGELOG.md  Cargo.toml  README.md  perf
generic-ec-curves/benches/: curves.rs
generic-ec-curves/src/: __docs.rs  dummy_curve.rs  ed25519.rs  lib.rs  utils.rs
generic-ec-curves/src/rust_crypto/: affine_coords.rs  curve_name.rs  hash_to_curve.rs  mod.rs  point.rs  scalar.rs
generic-ec-zkp/: CHANGELOG.md  Cargo.toml  README.md
generic-ec-zkp/benches/: zkp.rs
generic-ec-zkp/src/: hash_commitment.rs  lib.rs  polynomial.rs  schnorr_pok.rs
generic-ec/src/: arithmetic.rs  as_raw.rs  coords.rs  dummy_curve.rs  encoded.rs  errors.rs  generator.rs  hash_to_curve.rs  lib.rs  multiscalar.rs  scalar.rs  serde.rs  serde_utils.rs  wrappers.rs
generic-ec/src/multiscalar/: straus.rs
generic-ec/src/non_zero/: coords.rs  definition.rs  mod.rs
generic-ec/src/point/: coords.rs  ct.rs  definition.rs  mod.rs
generic-ec/src/scalar/: ct.rs  definition.rs  mod.rs
generic-ec/src/secret_scalar/: definition.rs  docs-constructor.md  docs.md  mod.rs
generic-ec/src/serde_support/: impls.rs  mod.rs  utils.rs
generic-ec/tests/: serde_format.rs
perf/curves/: results.json  table.md
src/: coords.rs  dummy_curve.rs  lib.rs  traits.rs  wrappers.rs
tests/: Cargo.toml  serde_format.rs
tests/benches/: measure_perf.rs  multiscalar.rs
tests/tests/: curves.rs  multiscalar.rs  serde.rs
wasm/nostd/: Cargo.toml
wasm/nostd/src/: lib.rs
wasm/wasm-example/: Cargo.toml
wasm/wasm-example/src/: lib.rs
