[workspace]
resolver = "2"
members = [
  "generic-ec",
  "generic-ec-core",
  "generic-ec-curves",
  "generic-ec-zkp",
  "wasm/wasm-example",
  "tests",
]
exclude = [
  "wasm/nostd",
]

[patch.crates-io.rand_hash]
git = "https://github.com/dfns/rand_hash"
branch = "udigest-rc3"

[patch.crates-io.udigest]
git = "https://github.com/dfns/udigest"
branch = "inline-struct-clone"
