[workspace]
resolver = "2"
members = [
  "generic-ec",
  "generic-ec-core",
  "generic-ec-curves",
  "generic-ec-zkp",
  "wasm/wasm-example",
  "tests",
]
exclude = [
  "wasm/nostd",
]

[workspace.dependencies]
generic-array = "0.14"

hex = { version = "0.4", default-features = false }

rand = "0.8"
rand_core = { version = "0.6", default-features = false }

serde = { version = "1", default-features = false }
serde_json = "1"
serde_with = { version = "2", default-features = false }

sha2 = { version = "0.10", default-features = false }

subtle = { version = "2.4", default-features = false }

udigest = { version = "0.2.0", default-features = false }

zeroize = { version = "1", default-features = false }

criterion = "0.5"
generic-tests = "0.1"
serde_test = "1"
rand_dev = "0.1"

[workspace.dependencies.curve25519]
package = "curve25519-dalek"
version = "4"
default-features = false

[patch.crates-io.udigest]
git = "https://github.com/dfns/udigest"
branch = "udigest_as"

[patch.crates-io.udigest-derive]
git = "https://github.com/dfns/udigest"
branch = "udigest_as"
