[package]
name = "generic-ec-curves"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Elliptic curves for `generic-ec` crate"
repository = "https://github.com/dfns/generic-ec"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic-ec-core = { version = "0.1", path = "../generic-ec-core", default-features = false }

subtle = { version = "2.4", default-features = false }
rand_core = { version = "0.6", default-features = false }
zeroize = { version = "1", default-features = false, features = ["zeroize_derive"] }

crypto-bigint = { version = "0.5", default-features = false, optional = true }
elliptic-curve = { version = "0.13", default-features = false, features = ["sec1", "hash2curve"], optional = true }
k256 = { version = "0.13", optional = true, default-features = false, features = ["hash2curve"] }
p256 = { version = "0.13", optional = true, default-features = false, features = ["hash2curve"] }
sha2 = { version = "0.10", default-features = false, optional = true }
stark-curve = { version = "0.1", default-features = false, optional = true }

group = { version = "0.13", default-features = false, optional = true }

[dependencies.curve25519]
package = "curve25519-dalek"
version = "4"
default-features = false
features = ["group", "zeroize", "rand_core", "precomputed-tables"]
optional = true

[features]
default = []
rust-crypto = ["elliptic-curve", "crypto-bigint"]
secp256k1 = ["rust-crypto", "k256", "sha2"]
secp256r1 = ["rust-crypto", "p256", "sha2"]
stark = ["rust-crypto", "stark-curve", "sha2"]
ed25519 = ["dep:curve25519", "dep:group"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]
