[package]
name = "generic-ec-curves"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Elliptic curves for `generic-ec` crate"
repository = "https://github.com/dfns/generic-ec"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic-ec-core = { version = "0.2", path = "../generic-ec-core", default-features = false }

subtle.workspace = true
rand_core.workspace = true
zeroize = { workspace = true, features = ["zeroize_derive"] }

elliptic-curve = { version = "0.13", default-features = false, features = ["sec1", "hash2curve"], optional = true }
k256 = { version = "0.13", optional = true, default-features = false, features = ["hash2curve"] }
p256 = { version = "0.13", optional = true, default-features = false, features = ["hash2curve"] }
sha2 = { workspace = true, optional = true }
stark-curve = { version = "0.1", default-features = false, optional = true }

group = { version = "0.13", default-features = false, optional = true }

[dependencies.curve25519]
workspace = true
features = ["group", "zeroize", "rand_core", "precomputed-tables"]
optional = true

[dev-dependencies]
rand.workspace = true
rand_dev.workspace = true

criterion = { workspace = true, features = ["html_reports"] }

[features]
default = []
rust-crypto = ["elliptic-curve"]
secp256k1 = ["rust-crypto", "k256", "sha2"]
secp256r1 = ["rust-crypto", "p256", "sha2"]
stark = ["rust-crypto", "stark-curve", "sha2"]
ed25519 = ["dep:curve25519", "dep:group"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]

[[bench]]
name = "curves"
harness = false
