[package]
name = "generic-ec-zkp"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dfns/generic-ec"
description = "ZK-proofs and primitives built on top of `generic-ec` crate"

categories = ["cryptography", "no-std", "no-std::no-alloc"]
keywords = ["elliptic-curves", "zk-proof"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic-ec = { version = "0.1", path = "../generic-ec", default-features = false }
udigest = { version = "0.1", features = ["derive"], optional = true }

subtle = { version = "2.4", default-features = false }
rand_core = { version = "0.6", default-features = false }

serde = { version = "1", default-features = false, features = ["derive"], optional = true }

# We don't depend on this crates directly, but need to specify features to make it compile
generic-array = "0.14"

[dev-dependencies]
rand = "0.8"
rand_dev = "0.1"
sha2 = "0.10"

generic-tests = "0.1"

generic-ec = { version = "0.1", path = "../generic-ec", default-features = false, features = ["all-curves"] }

[features]
default = ["std"]
std = ["alloc"]
alloc = ["udigest?/alloc", "serde?/alloc"]
serde = ["dep:serde", "generic-ec/serde", "generic-array/serde"]
udigest = ["dep:udigest", "generic-ec/udigest"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]
