[package]
name = "generic-ec-zkp"
version = "0.4.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LFDT-Lockness/generic-ec"
description = "ZK-proofs and primitives built on top of `generic-ec` crate"

categories = ["cryptography", "no-std", "no-std::no-alloc"]
keywords = ["elliptic-curves", "zk-proof"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic-ec = { version = "0.4.0", path = "../generic-ec", default-features = false }
udigest = { workspace = true, features = ["derive"], optional = true }

subtle.workspace = true
rand_core.workspace = true

serde = { workspace = true, features = ["derive"], optional = true }

# We don't depend on this crates directly, but need to specify features to make it compile
generic-array.workspace = true

[dev-dependencies]
rand.workspace = true
rand_dev.workspace = true
sha2.workspace = true

generic-tests.workspace = true

criterion = { workspace = true, features = ["html_reports"] }

generic-ec = { version = "0.4.0", path = "../generic-ec", default-features = false, features = ["all-curves"] }

[features]
default = ["std"]
std = ["alloc"]
alloc = ["udigest?/alloc", "serde?/alloc"]
serde = ["dep:serde", "generic-ec/serde", "generic-array/serde"]
udigest = ["dep:udigest", "generic-ec/udigest"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]

[[bench]]
name = "zkp"
harness = false
