[package]
name = "generic-ec"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dfns/generic-ec"
description = "General elliptic curve cryptography"
readme = "../README.md"

categories = ["cryptography", "no-std", "no-std::no-alloc"]
keywords = ["elliptic-curves"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic-ec-core = { version = "0.1", path = "../generic-ec-core" }
generic-ec-curves = { version = "0.1", path = "../generic-ec-curves", optional = true }
udigest = { version = "0.1", features = ["derive"], optional = true }

subtle = { version = "2.4", default-features = false }
rand_core = { version = "0.6", default-features = false }
zeroize = { version = "1", default-features = false, features = ["zeroize_derive"] }

serde = { version = "1", features = ["derive"], default-features = false, optional = true }
serde_with = { version = "2", features = ["macros"], default-features = false, optional = true }
hex = { version = "0.4", default-features = false, optional = true }

phantom-type = { version = "0.4", default-features = false }

[dev-dependencies]
rand = "0.8"
serde_json = "1"
serde_test = "1"

[features]
default = ["std", "serde"]
std = ["alloc"]
alloc = ["hex/alloc"]
serde = ["dep:serde", "generic-ec-core/serde", "hex", "serde_with"]
udigest = ["dep:udigest"]

curves = ["generic-ec-curves"]
curve-secp256k1 = ["curves", "generic-ec-curves/secp256k1"]
curve-secp256r1 = ["curves", "generic-ec-curves/secp256r1"]
curve-stark = ["curves", "generic-ec-curves/stark"]
curve-ed25519 = ["curves", "generic-ec-curves/ed25519"]
all-curves = ["curve-secp256k1", "curve-secp256r1", "curve-stark", "curve-ed25519"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]
