[package]
name = "generic-ec-tests"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic-ec = { path = "../generic-ec", default-features = false, features = ["all-curves", "serde"] }

plotters = "0.3"
anyhow = "1"
regex = "1.10"
tabled = { version = "0.15", default-features = false, features = ["std"] }

serde = { workspace = true, features = ["derive"] }
serde_with.workspace = true
serde_test.workspace = true
serde_json.workspace = true
hex.workspace = true

[dev-dependencies]
generic-tests.workspace = true
rand_dev.workspace = true
rand.workspace = true

criterion = { workspace = true, features = ["html_reports"] }

[features]
default = ["generic-ec/std"]

[[bench]]
name = "multiscalar"
harness = false

