[package]
name = "wasm-example"
version = "0.1.0"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
generic-ec = { path = "../../generic-ec", features = ["all-curves"] }
rand_core = { workspace = true, features = ["getrandom"] }
wasm-bindgen = "0.2.84"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
